# swc-workload-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
.swc/: _meta.json
.swc/main/: changelog.md  notes.md  pipeline.md  plan.md  workload.md
.swc/main/workitems/2.1/: context.md  quality-baseline.md  requirements.md  solution.md  specs.md
.swc/main/workitems/2.3/: context.md  quality-baseline.md  solution.md  specs.md
.swc/main/workitems/2.4/: code-review-findings.md  context.md  quality-baseline.md  requirements.md  specs.md  summary.md
.swc/main/workitems/3.2/: code-review-findings.md  context.md  quality-baseline.md  solution.md  summary.md
.swc/main/workitems/6.1/: code-review-findings.md  context.md  requirements.md  solution.md  specs.md  summary.md
.swc/main/workitems/6.2/: context.md  requirements.md  solution.md  specs.md
.swc/mcp/: architecture.md  changelog.md  notes.md  plan.md  tech-debt.md  workload.md
.swc/mcp/workitems/2.1/: code-review-findings.md  summary.md
.swc/mcp/workitems/2.3/: code-review-findings.md  requirements.md  summary.md
.swc/mcp/workitems/2.4/: solution.md
.swc/mcp/workitems/3.2/: feedback.md  requirements.md  specs.md
.swc/mcp/workitems/6.1/: quality-baseline.md
.swc/mcp/workitems/6.2/: context.md  summary.md
.swc/meta-attributes/: architecture.md  cli-change-spec.md  notes.md  pipeline.md  plan.md  ref_architecture-mcp.md  workload.json
docs/: architecture.md  development.md  test-with-mcp-inspector.md  try-with-mcp-inspector.md  usage.md
swc_workload_mcp/: __init__.py  __main__.py  bridge.py  server.py  tools.py
tests/mcp/: test_bridge.py  test_server.py  test_tools.py  test_tools_integration_status.py
tests/mcp/e2e/: test_smoke.py
tests/mcp/integration/: conftest.py  test_tools_authoring.py  test_tools_io.py  test_tools_status.py
tests/mcp/unit/: test_bridge.py  test_server.py  test_tools.py
