[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swc-workload-mcp"
dynamic = ["version"]
description = "MCP server wrapping the swc-workload CLI for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "swc-workload @ git+https://github.com/ctracey/swc-workload-cli.git",
]

[project.scripts]
swc-workload-mcp = "swc_workload_mcp.__main__:main"

[tool.hatch.version]
path = "swc_workload_mcp/_version.py"

[tool.hatch.metadata]
# Allow `swc-workload @ git+https://...` direct reference in dev deps.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["swc_workload_mcp"]
